[package]
name = "osakit"
version = "0.1.2"
edition = "2021"
authors = ["Marat Dulin <mdevils@gmail.com>"]
description = "OSAKit macOS Framework adapted for Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["applescript", "javascript", "osa", "osakit", "osascript"]
repository = "https://github.com/mdevils/rust-osakit"
homepage = "https://github.com/mdevils/rust-osakit"
documentation = "https://docs.rs/osakit/"
categories = [
    "os::macos-apis",
    "api-bindings",
    "accessibility"
]

[dependencies]
icrate = { version = "0.1.0", features = ["OSAKit", "OSAKit_OSAScript", "Foundation_NSString", "OSAKit_OSALanguage", "Foundation_NSURL", "OSAKit_OSALanguageInstance", "Foundation_NSDictionary", "Foundation_NSAppleEventDescriptor", "Foundation_NSValue", "Foundation_NSNumber", "Foundation_NSNull", "Foundation_NSDate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
stable = []
unstable = ["declare-script"]
full = ["stable", "unstable"]
# Unstable feature, use with caution, may change in future releases.
declare-script = []

# binaries for cargo-run-bin
[package.metadata.bin]
cargo-nextest = { version = "0.9.68", locked = true }
cargo-watch = { version = "8.5.2" }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
features = ["full"]
